feat(gic): add tests for secure espi interrupts
This patch adds a test to trigger an espi interrupt when cactus is
running and ensure it is handled. Hafnium/SPMC added support for
enabling interrupts in the extended SPI range and this patch adds code
to map the GIC into cactus, so that the test can pend the espi interrupt
at the distributor and handle it.

Signed-off-by: Raghu Krishnamurthy <raghu.ncstate@gmail.com>
Change-Id: Ief932c40e3abd33d619f2b144e61cae449147b27

--- a/spm/cactus/plat/arm/fvp/fdts/cactus.dts
+++ b/spm/cactus/plat/arm/fvp/fdts/cactus.dts
@@ -118,7 +118,8 @@
 			base-address = <0x00000000 0x2a490000>;
 			pages-count = <32>; /* Two 64KB pages */
 			attributes = <0x3>; /* read-write */
-			interrupts = <56 0x900>;
+			interrupts = <56 0x900>,
+					<5000 0x900>;
 		};
 	};
 };
