test(smc_fuzzing): add tsp testing
Adding TSP based SMC instructions to fuzzing infrastructure.

Change-Id: Ic47879dd6294be5afe44a37da9a630cf635f920a
Signed-off-by: mardyk01 <mark.dykes@arm.com>

--- a/smc_fuzz/dts/top.dts
+++ b/smc_fuzz/dts/top.dts
@@ -47,4 +47,23 @@
 			functionname = "sdei_shared_reset";
 		};
 	};
+	tsp {
+		bias = <30>;
+		tsp_add_op {
+			bias = <30>;
+			functionname = "tsp_add_op";
+		};
+		tsp_sub_op {
+			bias = <30>;
+			functionname = "tsp_sub_op";
+		};
+		tsp_mul_op {
+			bias = <30>;
+			functionname = "tsp_mul_op";
+		};
+		tsp_div_op {
+			bias = <30>;
+			functionname = "tsp_div_op";
+		};
+	};
 };
